deployment/k8sdeployments/config/webhook/manifests.yaml

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: mutating-webhook-configuration
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-backupnetworkswitchconfiguration
  failurePolicy: Fail
  name: mbackupnetworkswitchconfiguration.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - backupnetworkswitchconfigurations
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-clearzoneconfig
  failurePolicy: Fail
  name: mclearzoneconfig.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clearzoneconfigs
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-consistenthostgrouplunfact
  failurePolicy: Fail
  name: mconsistenthostgrouplunfact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - consistenthostgrouplunfacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-deletemultiplelunsfromallhosts
  failurePolicy: Fail
  name: mdeletemultiplelunsfromallhosts.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deletemultiplelunsfromallhosts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-deployesxihost
  failurePolicy: Fail
  name: mdeployesxihost.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deployesxihosts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-esxidatastore
  failurePolicy: Fail
  name: mesxidatastore.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - esxidatastores
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-esxidatastorefact
  failurePolicy: Fail
  name: mesxidatastorefact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - esxidatastorefacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-esxihostfact
  failurePolicy: Fail
  name: mesxihostfact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - esxihostfacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-ethernetswitch
  failurePolicy: Fail
  name: methernetswitch.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ethernetswitches
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-fcswitch
  failurePolicy: Fail
  name: mfcswitch.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - fcswitches
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-firmwareupgradepolicy
  failurePolicy: Fail
  name: mfirmwareupgradepolicy.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - firmwareupgradepolicies
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-generatelogbundle
  failurePolicy: Fail
  name: mgeneratelogbundle.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - generatelogbundles
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-getalllogbundleinfo
  failurePolicy: Fail
  name: mgetalllogbundleinfo.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - getalllogbundleinfos
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-hostgroup
  failurePolicy: Fail
  name: mhostgroup.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hostgroups
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-hostgroupfact
  failurePolicy: Fail
  name: mhostgroupfact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hostgroupfacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-hostiprange
  failurePolicy: Fail
  name: mhostiprange.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hostipranges
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-infrastructuresparepool
  failurePolicy: Fail
  name: minfrastructuresparepool.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - infrastructuresparepools
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-linkedvcenterucpsystemfact
  failurePolicy: Fail
  name: mlinkedvcenterucpsystemfact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - linkedvcenterucpsystemfacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-lun
  failurePolicy: Fail
  name: mlun.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - luns
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-paritygroup
  failurePolicy: Fail
  name: mparitygroup.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - paritygroups
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-paritygroupfact
  failurePolicy: Fail
  name: mparitygroupfact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - paritygroupfacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-presentluntomultiplehosts
  failurePolicy: Fail
  name: mpresentluntomultiplehosts.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - presentluntomultiplehosts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-provisionbaremetalserver
  failurePolicy: Fail
  name: mprovisionbaremetalserver.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - provisionbaremetalservers
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-provisionmultipleesxidatastore
  failurePolicy: Fail
  name: mprovisionmultipleesxidatastore.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - provisionmultipleesxidatastores
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-provisionmultipleluntohost
  failurePolicy: Fail
  name: mprovisionmultipleluntohost.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - provisionmultipleluntohosts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-provisionvlanpolicy
  failurePolicy: Fail
  name: mprovisionvlanpolicy.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - provisionvlanpolicy
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-provisionzonepolicy
  failurePolicy: Fail
  name: mprovisionzonepolicy.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - provisionzonepolicy
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-replaceesxihost
  failurePolicy: Fail
  name: mreplaceesxihost.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - replaceesxihosts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-resetmultipleserversbmcpassword
  failurePolicy: Fail
  name: mresetmultipleserversbmcpassword.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - resetmultipleserversbmcpasswords
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-resourcegroup
  failurePolicy: Fail
  name: mresourcegroup.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - resourcegroups
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-restorenetworkswitchconfiguration
  failurePolicy: Fail
  name: mrestorenetworkswitchconfiguration.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - restorenetworkswitchconfigurations
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-schedulefirmwareupgrade
  failurePolicy: Fail
  name: mschedulefirmwareupgrade.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - schedulefirmwareupgrades
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-server
  failurePolicy: Fail
  name: mserver.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - servers
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-serverbiostemplate
  failurePolicy: Fail
  name: mserverbiostemplate.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - serverbiostemplates
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-storagepool
  failurePolicy: Fail
  name: mstoragepool.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - storagepools
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-storagesystem
  failurePolicy: Fail
  name: mstoragesystem.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - storagesystems
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-storagesystemfact
  failurePolicy: Fail
  name: mstoragesystemfact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - storagesystemfacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-syncesxihostuplinkvlan
  failurePolicy: Fail
  name: msyncesxihostuplinkvlan.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - syncesxihostuplinkvlans
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-ucpsystem
  failurePolicy: Fail
  name: mucpsystem.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ucpsystems
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-unpresentlunfrommultiplehosts
  failurePolicy: Fail
  name: munpresentlunfrommultiplehosts.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - unpresentlunfrommultiplehosts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-upgradenetworkfirmware
  failurePolicy: Fail
  name: mupgradenetworkfirmware.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - upgradenetworkfirmwares
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-upgradeserverfirmware
  failurePolicy: Fail
  name: mupgradeserverfirmware.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - upgradeserverfirmwares
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-vcenter
  failurePolicy: Fail
  name: mvcenter.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vcenters
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-vcenterucpsystemfact
  failurePolicy: Fail
  name: mvcenterucpsystemfact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vcenterucpsystemfacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-vlan
  failurePolicy: Fail
  name: mvlan.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vlans
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-vlanpolicy
  failurePolicy: Fail
  name: mvlanpolicy.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vlanpolicy
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-vsanfact
  failurePolicy: Fail
  name: mvsanfact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vsanfacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-zone
  failurePolicy: Fail
  name: mzone.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - zones
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-zonealias
  failurePolicy: Fail
  name: mzonealias.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - zonealiases
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-ucp-hitachivantara-com-v1-zoneconfig
  failurePolicy: Fail
  name: mzoneconfig.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - zoneconfigs

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-backupnetworkswitchconfiguration
  failurePolicy: Fail
  name: vbackupnetworkswitchconfiguration.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - backupnetworkswitchconfigurations
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-clearzoneconfig
  failurePolicy: Fail
  name: vclearzoneconfig.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clearzoneconfigs
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-consistenthostgrouplunfact
  failurePolicy: Fail
  name: vconsistenthostgrouplunfact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - consistenthostgrouplunfacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-deletemultiplelunsfromallhosts
  failurePolicy: Fail
  name: vdeletemultiplelunsfromallhosts.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deletemultiplelunsfromallhosts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-deployesxihost
  failurePolicy: Fail
  name: vdeployesxihost.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deployesxihosts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-esxidatastore
  failurePolicy: Fail
  name: vesxidatastore.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - esxidatastores
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-esxidatastorefact
  failurePolicy: Fail
  name: vesxidatastorefact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - esxidatastorefacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-esxihostfact
  failurePolicy: Fail
  name: vesxihostfact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - esxihostfacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-ethernetswitch
  failurePolicy: Fail
  name: vethernetswitch.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ethernetswitches
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-fcswitch
  failurePolicy: Fail
  name: vfcswitch.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - fcswitches
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-firmwareupgradepolicy
  failurePolicy: Fail
  name: vfirmwareupgradepolicy.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - firmwareupgradepolicies
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-generatelogbundle
  failurePolicy: Fail
  name: vgeneratelogbundle.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - generatelogbundles
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-getalllogbundleinfo
  failurePolicy: Fail
  name: vgetalllogbundleinfo.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - getalllogbundleinfos
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-hostgroup
  failurePolicy: Fail
  name: vhostgroup.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hostgroups
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-hostgroupfact
  failurePolicy: Fail
  name: vhostgroupfact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hostgroupfacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-hostiprange
  failurePolicy: Fail
  name: vhostiprange.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hostipranges
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-infrastructuresparepool
  failurePolicy: Fail
  name: vinfrastructuresparepool.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - infrastructuresparepools
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-linkedvcenterucpsystemfact
  failurePolicy: Fail
  name: vlinkedvcenterucpsystemfact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - linkedvcenterucpsystemfacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-lun
  failurePolicy: Fail
  name: vlun.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - luns
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-paritygroup
  failurePolicy: Fail
  name: vparitygroup.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - paritygroups
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-paritygroupfact
  failurePolicy: Fail
  name: vparitygroupfact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - paritygroupfacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-presentluntomultiplehosts
  failurePolicy: Fail
  name: vpresentluntomultiplehosts.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - presentluntomultiplehosts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-provisionbaremetalserver
  failurePolicy: Fail
  name: vprovisionbaremetalserver.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - provisionbaremetalservers
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-provisionmultipleesxidatastore
  failurePolicy: Fail
  name: vprovisionmultipleesxidatastore.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - provisionmultipleesxidatastores
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-provisionmultipleluntohost
  failurePolicy: Fail
  name: vprovisionmultipleluntohost.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - provisionmultipleluntohosts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-provisionvlanpolicy
  failurePolicy: Fail
  name: vprovisionvlanpolicy.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - provisionvlanpolicy
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-provisionzonepolicy
  failurePolicy: Fail
  name: vprovisionzonepolicy.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - provisionzonepolicy
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-replaceesxihost
  failurePolicy: Fail
  name: vreplaceesxihost.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - replaceesxihosts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-resetmultipleserversbmcpassword
  failurePolicy: Fail
  name: vresetmultipleserversbmcpassword.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - resetmultipleserversbmcpasswords
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-resourcegroup
  failurePolicy: Fail
  name: vresourcegroup.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - resourcegroups
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-restorenetworkswitchconfiguration
  failurePolicy: Fail
  name: vrestorenetworkswitchconfiguration.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - restorenetworkswitchconfigurations
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-schedulefirmwareupgrade
  failurePolicy: Fail
  name: vschedulefirmwareupgrade.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - schedulefirmwareupgrades
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-server
  failurePolicy: Fail
  name: vserver.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - servers
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-serverbiostemplate
  failurePolicy: Fail
  name: vserverbiostemplate.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - serverbiostemplates
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-storagepool
  failurePolicy: Fail
  name: vstoragepool.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - storagepools
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-storagesystem
  failurePolicy: Fail
  name: vstoragesystem.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - storagesystems
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-storagesystemfact
  failurePolicy: Fail
  name: vstoragesystemfact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - storagesystemfacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-syncesxihostuplinkvlan
  failurePolicy: Fail
  name: vsyncesxihostuplinkvlan.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - syncesxihostuplinkvlans
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-ucpsystem
  failurePolicy: Fail
  name: vucpsystem.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ucpsystems
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-unpresentlunfrommultiplehosts
  failurePolicy: Fail
  name: vunpresentlunfrommultiplehosts.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - unpresentlunfrommultiplehosts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-upgradenetworkfirmware
  failurePolicy: Fail
  name: vupgradenetworkfirmware.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - upgradenetworkfirmwares
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-upgradeserverfirmware
  failurePolicy: Fail
  name: vupgradeserverfirmware.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - upgradeserverfirmwares
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-vcenter
  failurePolicy: Fail
  name: vvcenter.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vcenters
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-vcenterucpsystemfact
  failurePolicy: Fail
  name: vvcenterucpsystemfact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vcenterucpsystemfacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-vlan
  failurePolicy: Fail
  name: vvlan.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vlans
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-vlanpolicy
  failurePolicy: Fail
  name: vvlanpolicy.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vlanpolicy
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-vsanfact
  failurePolicy: Fail
  name: vvsanfact.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vsanfacts
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-zone
  failurePolicy: Fail
  name: vzone.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - zones
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-zonealias
  failurePolicy: Fail
  name: vzonealias.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - zonealiases
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-ucp-hitachivantara-com-v1-zoneconfig
  failurePolicy: Fail
  name: vzoneconfig.kb.io
  rules:
  - apiGroups:
    - ucp.hitachivantara.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - zoneconfigs
